--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,8 @@
             <input id="checkbox" type="checkbox">
             <button class="btn btn-block btn-lg btn-primary">Confirm</button>
         </form>
-        <button id="color" class="active btn btn-block btn-lg btn-primary">Change color</button>
+        <button id="color" class="btn btn-block btn-lg btn-primary">Change color</button>
+        <!-- active -->
     </div>
 
     <script src="script.js"></script>
